# budgie-indicator-applet

./: CHANGELOG.md  README.md  configure.ac  mkrelease.sh  v0.1.tar.gz.asc  v0.2.tar.gz.asc  v0.3.tar.gz.asc  v0.4.tar.gz.asc  v0.5.tar.gz.asc  v0.6.1.tar.gz.asc  v0.6.tar.gz.asc
debian/: changelog  control  copyright  rules  watch
debian/patches/: 0001-GCC-14-requires-pointer-types-to-be-explicitly-defin.patch  0001-Style-and-icon-size-fixes-3.patch  Revert-hiding-of-chrome-icons-now-that-they-have-res.patch  series  style-with-panel
debian/upstream/: metadata  signing-key.asc
src/: AppIndicatorApplet.c  AppIndicatorApplet.h  AppIndicatorApplet.plugin  AppIndicatorPanelApplet.c  Makefile.am  applet-main.c  applet.c  applet.h  eggaccelerators.c  eggaccelerators.h  plugin.c  plugin.h  tomboykeybinder.c  tomboykeybinder.h
